tests/netgen/grid/errors/grid_number__1/errors.netgen
Error: The number of nodes must be positive and at least 2 in one directions.
Quitting (on error).
